# cloud

./: .coderabbit.yaml  .gitignore  LICENSE  Makefile  docker-compose.yml  pyproject.toml  terraform.tf
.github/workflows/: code_rabbit_pr.yml  deploy.yml  plan.yml
src/handlers/api_all/: api_all.py
src/handlers/api_random/: api_random.py
src/handlers/call_hidemy_name/: call_hidemy_name.py
src/handlers/check_proxy_checker/: check_proxy_checker.py
src/handlers/check_proxy_closer/: check_proxy_closer.py
src/handlers/error_notificator/: error_notificator.py
src/handlers/tmp_001/: index.py
src/layers/common/python/common/aws/: __init__.py  aws.py
src/layers/common/python/common/dataclasses/: __init__.py  load_environments.py
src/layers/common/python/common/http/: __init__.py  http.py
src/layers/common/python/common/logger/: __init__.py  create_logger.py  logging_function.py  logging_handler.py
terraform_modules/common/: apigw.tf  cloudwatch.tf  dynamodb.tf  event_bridge.tf  events.tf  iam.tf  lambda.tf  outputs.tf  pipe.tf  s3.tf  sns.tf  sqs.tf  ssm.tf  terraform_config.tf  variables.tf
terraform_modules/http_api_lambda_route/: apigw.tf  terraform_config.tf  variables.tf
terraform_modules/lambda_function/: lambda.tf  variables.tf
terraform_modules/lambda_function_basic/: lambda.tf  log.tf  variables.tf
tests/unit/: conftest.py
tests/unit/fixtures/dynamodb/temp_store/: definition.json
tests/unit/fixtures/json_inputs/: sqs_event_sample_001.json  sqs_event_sample_002.json
tests/unit/handlers/: test_check_proxy_checker.py
(+2 files in other folders)
