[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
boto3 = "1.34.27"
boto3-stubs = {version = "1.34.27", extras = ["s3", "sqs", "ssm"]}
requests = "2.31.0"
pysocks = "1.7.1"
black = "^24.1.1"
isort = "^5.13.2"
aws-lambda-powertools = {version = "2.32.0", extras = ["all"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
